// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionRefValidation > should invalidate action reference (sha-ref / no comment) 1`] = `
[
  {
    "message": "Trusted actions should use a major version tag, if available.",
    "severity": "error",
    "type": "trusted-tag-ref",
  },
]
`;

exports[`ActionRefValidation > should invalidate single action reference (all errors) 1`] = `
[
  {
    "message": "v2.11.0 is not a valid SHA reference",
    "severity": "error",
    "type": "sha-ref",
  },
  {
    "message": "No version comment found",
    "severity": "warning",
    "type": "version-comment",
  },
  {
    "message": "Action is using node16. Versions older than node24 are being deprecated. Use a newer version of the action if possible.",
    "severity": "warning",
    "type": "node-version",
  },
]
`;

exports[`ActionRefValidation > should invalidate single action reference (bad sha ref) 1`] = `
[
  {
    "message": "v3.0.2 is not a valid SHA reference",
    "severity": "error",
    "type": "sha-ref",
  },
  {
    "message": "Action is using node20. Versions older than node24 are being deprecated. Use a newer version of the action if possible.",
    "severity": "warning",
    "type": "node-version",
  },
]
`;

exports[`ActionRefValidation > should invalidate single action reference (no version comment) 1`] = `
[
  {
    "message": "No version comment found",
    "severity": "warning",
    "type": "version-comment",
  },
  {
    "message": "Action is using node20. Versions older than node24 are being deprecated. Use a newer version of the action if possible.",
    "severity": "warning",
    "type": "node-version",
  },
]
`;

exports[`ActionRefValidation > should invalidate single action reference (node16) 1`] = `
[
  {
    "message": "Trusted actions should use a major version tag, if available.",
    "severity": "error",
    "type": "trusted-tag-ref",
  },
  {
    "message": "Action is using node16. Versions older than node24 are being deprecated. Use a newer version of the action if possible.",
    "severity": "warning",
    "type": "node-version",
  },
]
`;

exports[`ActionRefValidation > should validate single action reference (node24) 1`] = `
[
  {
    "message": "Trusted actions should use a major version tag, if available.",
    "severity": "error",
    "type": "trusted-tag-ref",
  },
]
`;
